# fortran-c-interface

./: CMakeLists.txt  README.md
capi/: capi.c  capi.h
fsrc/: capi.f90  main.f90
